--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "next": "12.2.0",
     "react": "18.2.0",
+    "react-animate-on-scroll": "^2.1.5",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0"
   },
