--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-animate-on-scroll": "^2.1.5",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "react-scroll": "^1.8.7",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
