--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   },
   "dependencies": {
     "animate.css": "^4.1.1",
+    "formik": "^2.2.9",
     "next": "12.2.0",
     "react": "18.2.0",
     "react-animate-on-scroll": "^2.1.5",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-scroll": "^1.8.7",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "eslint": "8.18.0",
