--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-scroll": "^1.8.7",
+    "reactjs-popup": "^2.0.5",
     "styled-components": "^5.3.5",
     "yup": "^0.32.11"
   },
