--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@zeit/next-sass": "^1.0.1",
+    "@zeit/next-typescript": "^1.1.1",
     "animate.css": "^4.1.1",
     "formik": "^2.2.9",
     "next": "12.2.0",
@@ -19,9 +21,12 @@
     "react-scroll": "^1.8.7",
     "reactjs-popup": "^2.0.5",
     "styled-components": "^5.3.5",
+    "typescript": "^4.7.4",
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/node": "^18.6.3",
+    "@types/react": "^18.0.15",
     "eslint": "8.18.0",
     "eslint-config-next": "12.2.0",
     "sass": "^1.53.0"
