--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/react-scroll": "^1.8.4",
     "@zeit/next-sass": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
     "animate.css": "^4.1.1",
@@ -27,6 +28,7 @@
   "devDependencies": {
     "@types/node": "^18.6.3",
     "@types/react": "^18.0.15",
+    "@types/styled-components": "^5.1.25",
     "eslint": "8.18.0",
     "eslint-config-next": "12.2.0",
     "sass": "^1.53.0"
