--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-scroll": "^1.8.7",
+    "react-select": "^5.4.0",
     "reactjs-popup": "^2.0.5",
     "styled-components": "^5.3.5",
     "typescript": "^4.7.4",
